--- a/app/templates/layouts/wrapper.html.j2
+++ b/app/templates/layouts/wrapper.html.j2
@@ -27,7 +27,7 @@
         <script type="module" defer src="/static/js/main.js"></script>
     </head>
 
-    <body>
+    <body style="padding-bottom: 500px;">
         <div class="container mt-3">
             <div id="header" class="d-flex flex-row justify-content-between align-items-center mb-3">
                 <h1><a href="/">Time Tracker</a></h1>
