--- a/app/templates/frames/time_form.html.j2
+++ b/app/templates/frames/time_form.html.j2
@@ -1,34 +1,27 @@
 
 <section>
-    <div class="modal-header">
-        <h5 class="modal-title">{{ title }}</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-    </div>
-    <div class="modal-body">
-        {# TODO: Handle form POST target, it defaults to / since it's in a modal #}
-        <form id="addEditForm" method="post" action="/frames/time_form/{{ row_id }}">
-            <div class="row mb-3">
-                <div class="col-md-6">
-                    <label class="form-label">Start Time</label>
-                    <input class="form-control flatpickr" type="text" name="start" data-date-type="datetime" data-date-value="{{ values.get('start', '') }}" required />
-                </div>
-                <div class="col-md-6">
-                    <label class="form-label">End Time</label>
-                    <input class="form-control flatpickr" type="text" name="end" data-date-type="datetime" data-date-value="{{ values.get('end', '') }}" required />
-                </div>
-
-                <div class="mt-3">
-                    <label class="form-label">Note</label>
-                    <textarea class="form-control" name="note" rows="3">{{ values.get('note', '') }}</textarea>
-                </div>
-
-                <input type="hidden" name="clock" value="manual" />
-                <input type="hidden" name="row_id" value="{{ row_id }}" />
+    <form id="addEditForm" method="post" action="/frames/time_form/{{ row_id }}">
+        <div class="row mb-3">
+            <div class="col-md-6">
+                <label class="form-label">Start Time</label>
+                <input class="form-control flatpickr" type="text" name="start" data-date-type="datetime" data-date-value="{{ values.get('start', '') }}" required />
             </div>
-        </form>
-    </div>
-    <div class="modal-footer">
-        <button id="close" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <div class="col-md-6">
+                <label class="form-label">End Time</label>
+                <input class="form-control flatpickr" type="text" name="end" data-date-type="datetime" data-date-value="{{ values.get('end', '') }}" required />
+            </div>
+
+            <div class="mt-3">
+                <label class="form-label">Note</label>
+                <textarea class="form-control" name="note" rows="5">{{ values.get('note', '') }}</textarea>
+            </div>
+
+            <input type="hidden" name="clock" value="manual" />
+            <input type="hidden" name="row_id" value="{{ row_id }}" />
+        </div>
+    </form>
+    <div class="d-flex flex-row justify-content-end">
+        <button id="delete" class="btn btn-danger me-3" data-time-id="{{ row_id }}">Delete</button>
         <button id="submit" type="button" class="btn btn-primary">Save changes</button>
     </div>
 
@@ -40,7 +33,6 @@
             const frame = document.currentScript.parentNode;
 
             frame.querySelector("#submit").addEventListener('click', async e => {
-                const modal = frame.closest(".modal.show");
                 const form = frame.querySelector("form");
 
                 let formData = new FormData(form);
@@ -55,12 +47,24 @@
                 });
 
                 if (response.ok) {
-                    // Close modal and emit changed event
-                    modal.querySelector("#close").click();
                     frame.emit("time:changed");
                 } else {
                     // TODO: Show flash here
                     console.error(`Failed to add time record: ${response.text}`)
+                }
+            });
+
+            frame.querySelector("#delete").addEventListener("click", async e => {
+                const id = e.target.getAttribute('data-time-id');
+                let response = await fetch(`/time/delete/${id}`, {
+                    method: 'delete'
+                });
+
+                if (response.status == 200) {
+                    frame.emit("time:changed");
+                } else {
+                    // TODO: Show flash here
+                    console.error(`Failed to delete time record ${id}: ${response.text}`)
                 }
             });
         })();
