Add basic break support
Adds support for starting ending breaks on the current time record
Still need to add edit/delete functionality

Redesigned the manual time logging to be part of the overall time
accordion list

Update dependencies

--- a/app/templates/frames/time_form.html.j2
+++ b/app/templates/frames/time_form.html.j2
@@ -21,7 +21,9 @@
         </div>
     </form>
     <div class="d-flex flex-row justify-content-end">
-        <button id="delete" class="btn btn-danger me-3" data-time-id="{{ row_id }}">Delete</button>
+        {% if row_id %}
+            <button id="delete" class="btn btn-danger me-3" data-time-id="{{ row_id }}">Delete</button>
+        {% endif %}
         <button id="submit" type="button" class="btn btn-primary">Save changes</button>
     </div>
 
