--- a/app/templates/layouts/wrapper.html.j2
+++ b/app/templates/layouts/wrapper.html.j2
@@ -40,7 +40,7 @@
                     </a>
                 </div>
             </div>
-            {% block content %}{% endblock %}
+            {% block content %}{% endblock content %}
         </div>
     </body>
 
