Support setting specific work days

--- a/app/templates/pages/settings.html.j2
+++ b/app/templates/pages/settings.html.j2
@@ -1,11 +1,11 @@
-{% extends 'layouts/wrapper.html.j2' %}
+{% extends "layouts/wrapper.html.j2" %}
 
 {% block content %}
     <form method="post" action="/settings">
         <div class="mb-3">
             <div class="mb-2">
                 <label class="form-label">Time Zone</label>
-                <input class="form-control" type="text" name="timezone" id="timezone" value="{{ settings.timezone }}" required>
+                <input class="form-control" type="text" name="timezone" id="timezone" value="{{ settings.timezone }}" required />
             </div>
             <div class="mb-2">
                 <label class="form-label">Week Start</label>
@@ -18,11 +18,18 @@
             </div>
             <div class="mb-2">
                 <label class="form-label">Hours Per Day</label>
-                <input class="form-control" type="text" name="hours_per_day" id="hours_per_day" value="{{ settings.hours_per_day }}" required>
+                <input class="form-control" type="text" name="hours_per_day" id="hours_per_day" value="{{ settings.hours_per_day }}" required />
             </div>
             <div class="mb-2">
-                <label class="form-label">Days Per Week</label>
-                <input class="form-control" type="number" name="days_per_week" id="days_per_week" value="{{ settings.days_per_week }}" required>
+                <label class="form-label">Work Days</label>
+                {% set work_days = settings.work_days_list() | list %}
+
+                {% for day in ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"] %}
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="work_day_{{ day }}" id="work_day_{{ day }}" {% if day in work_days %}checked{% endif %}/>
+                        <label class="form-check-label" for="work_day_{{ day }}">{{ day }}</label>
+                    </div>
+                {% endfor %}
             </div>
         </div>
         <button class="btn btn-primary" type="submit">Submit</button>
