--- a/app/templates/layouts/wrapper.html.j2
+++ b/app/templates/layouts/wrapper.html.j2
@@ -29,6 +29,7 @@
 
     <body style="padding-bottom: 500px;">
         <div class="container mt-3">
+            {# Header #}
             <div id="header" class="d-flex flex-row justify-content-between align-items-center mb-3">
                 <h1><a href="/">Time Tracker</a></h1>
                 <div>
@@ -40,6 +41,26 @@
                     </a>
                 </div>
             </div>
+
+            {# Toast messages #}
+            <div aria-live="polite" aria-atomic="true">
+                <div class="mt-3">
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                            {% for category, message in messages %}
+                                <div class="alert alert-{{ category }}" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="true">
+                                    <div class="d-flex">
+                                        <div class="toast-body">{{ message }}</div>
+                                        <button onclick="this.parentNode.parentNode.remove()" type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
+                </div>
+            </div>
+
+            {# Page content #}
             {% block content %}{% endblock content %}
         </div>
     </body>
