--- a/app/templates/layouts/wrapper.html.j2
+++ b/app/templates/layouts/wrapper.html.j2
@@ -33,10 +33,11 @@
             <div id="header" class="d-flex flex-row justify-content-between align-items-center mb-3">
                 <h1><a href="/">Time Tracker</a></h1>
                 <div>
-                    <a href="https://github.com/danstewart/time-tracker" class="icon" style="margin-right: 15px">
+                    <a title="Log out" class="icon me-4" href="/logout"><i class="bi bi-box-arrow-in-left"></i></a>
+                    <a title="GitHub" href="https://github.com/danstewart/time-tracker" class="icon me-4">
                         <i class="bi bi-github"></i>
                     </a>
-                    <a href="/settings" class="icon">
+                    <a title="Settings" href="/settings" class="icon">
                         <i class="bi bi-gear-wide-connected"></i>
                     </a>
                 </div>
@@ -66,5 +67,7 @@
     </body>
 
     <!-- Setting values for the JS to read -->
-    <span class="d-none" id="timezone">{{ settings.timezone }}</span>
+    {% if settings %}
+        <span class="d-none" id="timezone">{{ settings.timezone }}</span>
+    {% endif %}
 </html>
