Clean up user authentication logic
- Clean up logic
- Move logic from model to controller
- Add more exceptions
- Start work on email verification

--- a/app/templates/pages/login.html.j2
+++ b/app/templates/pages/login.html.j2
@@ -20,10 +20,10 @@
             </div>
             <div class="d-flex justify-content-between">
                 <div class="d-flex justify-content-end">
-                    <button type="submit" name="login" class="btn btn-primary">Log in</button>
-                    <button type="submit" name="register" class="btn btn-link">Register</button>
+                    <button type="submit" name="action" value="login" class="btn btn-primary">Log in</button>
+                    <button type="submit" name="action" value="register" class="btn btn-link">Register</button>
                 </div>
-                <button type="submit" class="btn btn-link" name="forgot-password">Forgot password</button>
+                <button type="submit" class="btn btn-link" name="action" value="forgot-password">Forgot password</button>
             </div>
         </form>
     </div>
