--- a/app/templates/layouts/wrapper.html.j2
+++ b/app/templates/layouts/wrapper.html.j2
@@ -33,13 +33,15 @@
             <div id="header" class="d-flex flex-row justify-content-between align-items-center mb-3">
                 <h1><a href="/">Time Tracker</a></h1>
                 <div>
-                    <a title="Log out" class="icon me-4" href="/logout"><i class="bi bi-box-arrow-in-left"></i></a>
                     <a title="GitHub" href="https://github.com/danstewart/time-tracker" class="icon me-4">
                         <i class="bi bi-github"></i>
                     </a>
-                    <a title="Settings" href="/settings" class="icon">
-                        <i class="bi bi-gear-wide-connected"></i>
-                    </a>
+                    {% if is_logged_in %}
+                        <a title="Settings" href="/settings" class="icon">
+                            <i class="bi me-4 bi-gear-wide-connected"></i>
+                        </a>
+                        <a title="Log out" class="icon me-4" href="/logout"><i class="bi bi-box-arrow-in-left"></i></a>
+                    {% endif %}
                 </div>
             </div>
 
