--- a/app/templates/email/password_reset.html.j2
+++ b/app/templates/email/password_reset.html.j2
@@ -1,20 +1,19 @@
 {#
-Welcome and verify email
+Password reset email
 Expected replacers:
-- verify_url: Absolute email verification URL with token
+- password_reset_url: Absolute password reset URL with token
 #}
 {% extends "layouts/email_wrapper.html.j2" %}
 {% block content %}
-    <span class="preheader">Welcome to Time Tracker.</span>
+    <span class="preheader">Time Tracker: Password Reset</span>
     <table role="presentation" class="main">
         <tr>
             <td class="wrapper">
                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                     <tr>
                         <td>
-                            <p>👋 Welcome to Time Tracker.</p>
-                            <p>Click the link below to verify your email and get started.</p>
-                            <p>If you don't verify within 7 days we'll delete your email address from our system (you can always re-register though).</p>
+                            <p>👋 Hey there.</p>
+                            <p>You requested a password reset, click the below button to continue.</p>
                             <table role="presentation"
                                    border="0"
                                    cellpadding="0"
@@ -27,7 +26,7 @@ Expected replacers:
                                                 <tbody>
                                                     <tr>
                                                         <td>
-                                                            <a href="{{ verify_url }}" target="_blank">Verify</a>
+                                                            <a href="{{ password_reset_url }}" target="_blank">Reset Password</a>
                                                         </td>
                                                     </tr>
                                                 </tbody>
@@ -47,9 +46,9 @@ Expected replacers:
     <table role="presentation" border="0" cellpadding="0" cellspacing="0">
         <tr>
             <td class="content-block">
-                <span class="apple-link">Didn't sign up?
+                <span class="apple-link">Didn't request a change?
                     <br />
-                Just ignore this email and we'll delete your account after 7 days.</span>
+                Just ignore this email and we'll leave your password as is.</span>
             </td>
         </tr>
     </table>
