Add password reset form

--- a/app/templates/layouts/email_wrapper.html.j2
+++ b/app/templates/layouts/email_wrapper.html.j2
@@ -23,7 +23,7 @@
                                width="100%">
                             <tr>
                                 <td class="align-center" width="100%">
-                                    <a class="header" href="https://timetracker.danstewart.xyz">Time Tracker</a>
+                                    <a class="header" href="{{ host }}">Time Tracker</a>
                                 </td>
                             </tr>
                         </table>
