Rename to LogMyTime

--- a/app/templates/email/password_reset.html.j2
+++ b/app/templates/email/password_reset.html.j2
@@ -5,7 +5,7 @@ Expected replacers:
 #}
 {% extends "layouts/email_wrapper.html.j2" %}
 {% block content %}
-    <span class="preheader">Time Tracker: Password Reset</span>
+    <span class="preheader">LogMyTime: Password Reset</span>
     <table role="presentation" class="main">
         <tr>
             <td class="wrapper">
