--- a/app/templates/layouts/email_wrapper.html.j2
+++ b/app/templates/layouts/email_wrapper.html.j2
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Time Tracker</title>
+        <title>LogMyTime</title>
         <style>{% include 'partials/email_styles.css.j2' %}</style>
     </head>
     <body>
@@ -23,7 +23,7 @@
                                width="100%">
                             <tr>
                                 <td class="align-center" width="100%">
-                                    <a class="header" href="{{ host }}">Time Tracker</a>
+                                    <a class="header" href="{{ host }}">LogMyTime</a>
                                 </td>
                             </tr>
                         </table>
