--- a/app/templates/pages/about.html.j2
+++ b/app/templates/pages/about.html.j2
@@ -1,9 +1,9 @@
 {% extends "layouts/wrapper.html.j2" %}
-
 {% block content %}
     <div class="mt-5">
-        <p class="fs-5">Time Tracker is a basic <a href="https://github.com/danstewart/time-tracker">open source</a> web app for keeping track of your working hours and overtime.</p>
+        <p class="fs-5">
+            LogMyTime is a basic <a href="https://github.com/danstewart/log-my-time">open source</a> web app for keeping track of your working hours and overtime.
+        </p>
         {# TODO: Flesh out, list features, add screenshots/gifs #}
     </div>
 {% endblock content %}
-
