--- a/app/templates/email/account_exists.html.j2
+++ b/app/templates/email/account_exists.html.j2
@@ -5,14 +5,14 @@ Expected replacers:
 #}
 {% extends "layouts/email_wrapper.html.j2" %}
 {% block content %}
-    <span class="preheader">Welcome to Time Tracker.</span>
+    <span class="preheader">Welcome to LogMyTime.</span>
     <table role="presentation" class="main">
         <tr>
             <td class="wrapper">
                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                     <tr>
                         <td>
-                            <p>👋 Welcome back to Time Tracker.</p>
+                            <p>👋 Welcome back to LogMyTime.</p>
                             <p>You tried to register but you already have an account.</p>
                             <p>If you've forgotten your password click the button below to reset it.</p>
                             <table role="presentation"
