--- a/app/templates/email/welcome.html.j2
+++ b/app/templates/email/welcome.html.j2
@@ -5,14 +5,14 @@ Expected replacers:
 #}
 {% extends "layouts/email_wrapper.html.j2" %}
 {% block content %}
-    <span class="preheader">Welcome to Time Tracker.</span>
+    <span class="preheader">Welcome to LogMyTime.</span>
     <table role="presentation" class="main">
         <tr>
             <td class="wrapper">
                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                     <tr>
                         <td>
-                            <p>👋 Welcome to Time Tracker.</p>
+                            <p>👋 Welcome to LogMyTime.</p>
                             <p>Click the link below to verify your email and get started.</p>
                             <p>If you don't verify within 7 days we'll delete your email address from our system (you can always re-register though).</p>
                             <table role="presentation"
