--- a/app/templates/layouts/wrapper.html.j2
+++ b/app/templates/layouts/wrapper.html.j2
@@ -6,34 +6,43 @@
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <meta name="author" content="Dan Stewart" />
-
-        <title>{{ page_title or 'Time Tracker' }}</title>
-
+        <title>{{ page_title or 'LogMyTime' }}</title>
         <!-- From https://favicon.io/ -->
-        <link rel="apple-touch-icon" sizes="180x180" href="/static/icons/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/static/icons/favicon-32x32.png" />
-
+        <link rel="apple-touch-icon"
+              sizes="180x180"
+              href="/static/icons/apple-touch-icon.png"/>
+        <link rel="icon"
+              type="image/png"
+              sizes="32x32"
+              href="/static/icons/favicon-32x32.png"/>
         <!-- Bootstrap 5 CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+              rel="stylesheet"
+              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+              crossorigin="anonymous"/>
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"/>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
         <!-- Flatpickr CSS -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr@4.6.11/dist/flatpickr.min.css" />
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/flatpickr@4.6.11/dist/flatpickr.min.css"/>
         <script src="https://cdn.jsdelivr.net/npm/flatpickr@4.6.11/dist/flatpickr.min.js"></script>
-
         <!-- Our CSS and js -->
         <link rel="stylesheet" href="/static/css/default.css" />
         <script type="module" defer src="/static/js/main.js"></script>
     </head>
-
     <body style="padding-bottom: 500px;">
         <div class="container mt-3">
             {# Header #}
-            <div id="header" class="d-flex flex-row justify-content-between align-items-center mb-3">
-                <h1><a href="/">Time Tracker</a></h1>
+            <div id="header"
+                 class="d-flex flex-row justify-content-between align-items-center mb-3">
+                <h1>
+                    <a href="/">LogMyTime</a>
+                </h1>
                 <div>
-                    <a title="GitHub" href="https://github.com/danstewart/time-tracker" class="icon me-4">
+                    <a title="GitHub"
+                       href="https://github.com/danstewart/log-my-time"
+                       class="icon me-4">
                         <i class="bi bi-github"></i>
                     </a>
                     {% if is_logged_in %}
@@ -44,17 +53,25 @@
                     {% endif %}
                 </div>
             </div>
-
             {# Toast messages #}
             <div aria-live="polite" aria-atomic="true">
                 <div class="mt-3">
                     {% with messages = get_flashed_messages(with_categories=true) %}
                         {% if messages %}
                             {% for category, message in messages %}
-                                <div class="alert alert-{{ category }}" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="true">
+                                <div class="alert alert-{{ category }}"
+                                     role="alert"
+                                     aria-live="assertive"
+                                     aria-atomic="true"
+                                     data-bs-autohide="true">
                                     <div class="d-flex">
                                         <div class="toast-body">{{ message }}</div>
-                                        <button onclick="this.parentNode.parentNode.remove()" type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                                        <button onclick="this.parentNode.parentNode.remove()"
+                                                type="button"
+                                                class="btn-close me-2 m-auto"
+                                                data-bs-dismiss="toast"
+                                                aria-label="Close">
+                                        </button>
                                     </div>
                                 </div>
                             {% endfor %}
@@ -62,14 +79,11 @@
                     {% endwith %}
                 </div>
             </div>
-
             {# Page content #}
-            {% block content %}{% endblock content %}
+            {% block content %}
+            {% endblock content %}
         </div>
     </body>
-
     <!-- Setting values for the JS to read -->
-    {% if settings %}
-        <span class="d-none" id="timezone">{{ settings.timezone }}</span>
-    {% endif %}
+    {% if settings %}<span class="d-none" id="timezone">{{ settings.timezone }}</span>{% endif %}
 </html>
