Fix login form width on mobile

--- a/app/templates/pages/password-reset.html.j2
+++ b/app/templates/pages/password-reset.html.j2
@@ -1,29 +1,26 @@
 {% extends "layouts/wrapper.html.j2" %}
 {% block content %}
     <div class="d-flex justify-content-center mt-5">
-        <form class="border p-5" method="post">
-            <label for="userPassword" class="form-label">New Password</label>
-            <div class="input-group mb-3">
-                <input type="password"
-                       class="form-control"
-                       id="userPassword"
-                       name="password"/>
-                <button class="btn btn-outline-secondary" type="button" id="showPassword">
-                    <i class="bi bi-eye-fill"></i>
-                </button>
-            </div>
-            <div class="d-flex justify-content-between">
-                <div class="d-flex justify-content-end">
-                    <button type="submit" name="action" value="login" class="btn btn-primary">Set Password</button>
+        <div class="col-xl-5">
+            <form class="border p-5" method="post">
+                <label for="userPassword" class="form-label">New Password</label>
+                <div class="input-group mb-3">
+                    <input type="password"
+                           class="form-control"
+                           id="userPassword"
+                           name="password"/>
+                    <button class="btn btn-outline-secondary" type="button" id="showPassword">
+                        <i class="bi bi-eye-fill"></i>
+                    </button>
                 </div>
-            </div>
-        </form>
+                <div class="d-flex justify-content-between">
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" name="action" value="login" class="btn btn-primary">Set Password</button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
-    <style>
-        form {
-            width: 40%;
-        }
-    </style>
     <script>
         window.addEventListener("DOMContentLoaded", () => {
             const showPasswordBtn = document.getElementById("showPassword");
