--- a/app/templates/pages/login.html.j2
+++ b/app/templates/pages/login.html.j2
@@ -1,37 +1,40 @@
 {% extends "layouts/wrapper.html.j2" %}
 {% block content %}
     <div class="d-flex justify-content-center mt-5">
-        <form class="border p-5" method="post">
-            <div class="mb-3">
-                <label for="userEmail" class="form-label">Email Address</label>
-                <input type="email"
-                       class="form-control"
-                       id="userEmail"
-                       name="email"
-                       aria-describedby="emailHelp"/>
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-            </div>
-            <label for="userPassword" class="form-label">Password</label>
-            <div class="input-group mb-3">
-                <input type="password" class="form-control" id="userPassword" name="password" />
-                <button class="btn btn-outline-secondary" type="button" id="showPassword">
-                    <i class="bi bi-eye-fill"></i>
-                </button>
-            </div>
-            <div class="d-flex justify-content-between">
-                <div class="d-flex justify-content-end">
-                    <button type="submit" name="action" value="login" class="btn btn-primary">Log in</button>
-                    <button type="submit" name="action" value="register" class="btn btn-link">Register</button>
+        <div class="col-xl-5">
+            <form class="border p-5" method="post">
+                <div class="mb-3">
+                    <label for="userEmail" class="form-label">Email Address</label>
+                    <input type="email"
+                           class="form-control"
+                           id="userEmail"
+                           name="email"
+                           aria-describedby="emailHelp"/>
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
-                <button type="submit" class="btn btn-link" name="action" value="forgot-password">Forgot password</button>
-            </div>
-        </form>
+                <label for="userPassword" class="form-label">Password</label>
+                <div class="input-group mb-3">
+                    <input type="password"
+                           class="form-control"
+                           id="userPassword"
+                           name="password"/>
+                    <button class="btn btn-outline-secondary" type="button" id="showPassword">
+                        <i class="bi bi-eye-fill"></i>
+                    </button>
+                </div>
+                <div class="d-flex justify-content-between">
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" name="action" value="login" class="btn btn-primary">Log in</button>
+                        <button type="submit" name="action" value="register" class="btn btn-link">Register</button>
+                    </div>
+                    <button type="submit"
+                            class="btn btn-link"
+                            name="action"
+                            value="forgot-password">Forgot password</button>
+                </div>
+            </form>
+        </div>
     </div>
-    <style>
-        form {
-            width: 40%;
-        }
-    </style>
     <script>
         window.addEventListener("DOMContentLoaded", () => {
             const showPasswordBtn = document.getElementById("showPassword");
