--- a/app/templates/frames/time_form.html.j2
+++ b/app/templates/frames/time_form.html.j2
@@ -5,6 +5,7 @@
 {% if time %}
     {% set row.id = time.id %}
     {% set row.start = arrow.get(time.start).to(settings.timezone) %}
+    {% set row.note = time.note %}
 
     {% if time.end %}
         {% set row.end = arrow.get(time.end).to(settings.timezone) %}
