--- a/app/templates/frames/time_log_table.html.j2
+++ b/app/templates/frames/time_log_table.html.j2
@@ -10,7 +10,7 @@
                         data-bs-toggle="collapse"
                         data-bs-target="#accordion-add-body"
                         aria-controls="add-accordion-body">
-                    <div class="d-flex justify-content-center" style="width: 95%">
+                    <div class="d-flex justify-content-center flex-grow-1">
                         <svg xmlns="http://www.w3.org/2000/svg"
                              width="32"
                              height="32"
@@ -44,12 +44,12 @@
                             data-bs-toggle="collapse"
                             data-bs-target="#accordion-{{ time.id }}-body"
                             aria-controls="{{ time.id }}-accordion-body">
-                        <div class="d-flex justify-content-between" style="width: 95%">
+                        <div class="d-flex justify-content-between flex-grow-1">
                             <p>
                                 <span class="fw-bold">{{ start.format("Do [of] MMM") }}</span>
                                 <span>{{ start.format("HH:mm") }} - {{ end.format("HH:mm") if end else 'Still clocked in' }}</span>
                             </p>
-                            <span style="height: 20px" class="badge bg-secondary">{{ humanize_seconds(time.logged(), short=True) }}</span>
+                            <span class="badge bg-secondary time-badge">{{ humanize_seconds(time.logged(), short=True) }}</span>
                         </div>
                     </button>
                 </h2>
