--- a/app/static/css/default.css
+++ b/app/static/css/default.css
@@ -1,3 +1,4 @@
+/* Core styles */
 #header a {
     text-decoration: none;
     color: black;
@@ -13,17 +14,19 @@ a.icon {
     font-size: 24px;
 }
 
+/* Custom classes */
 .edit-time-entry {
     cursor: pointer;
     color: #0d6efd;
 }
 
-.accordion-button::after,
-.accordion-button:not(.collapsed)::after {
-    background-image: none;
-}
-
 .time-badge {
     height: 20px;
     width: 60px;
+}
+
+/* Bootstrap overrides */
+.accordion-button::after,
+.accordion-button:not(.collapsed)::after {
+    content: none;
 }
