--- a/app/templates/pages/login.html.j2
+++ b/app/templates/pages/login.html.j2
@@ -22,13 +22,13 @@
                         <i class="bi bi-eye-fill"></i>
                     </button>
                 </div>
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between align-items-center">
                     <div class="d-flex justify-content-end">
-                        <button type="submit" name="action" value="login" class="btn btn-primary">Log in</button>
+                        <button type="submit" name="action" value="login" class="btn btn-primary text-nowrap">Log in</button>
                         <button type="submit" name="action" value="register" class="btn btn-link">Register</button>
                     </div>
                     <button type="submit"
-                            class="btn btn-link"
+                            class="btn btn-link pe-0"
                             name="action"
                             value="forgot-password">Forgot password</button>
                 </div>
