--- a/app/templates/frames/clock_in_form.html.j2
+++ b/app/templates/frames/clock_in_form.html.j2
@@ -1,24 +1,39 @@
 <form method="post" action="/time/add">
     <div class="row mb-3">
-        <div class="col-md-4">
-            <label class="form-label">Time</label>
-            <input class="form-control flatpickr" type="text" name="time" id="form-time" data-date-type="time" required />
+        <div class="col-12 col-md-4">
+            <div class="input-group">
+                <input class="form-control flatpickr input-group-text"
+                       type="text"
+                       name="time"
+                       id="form-time"
+                       data-date-type="time"
+                       required/>
+                {% if clocked_in %}
+                    {% if on_break %}
+                        <button class="btn btn-secondary text-nowrap"
+                                name="clock"
+                                value="break:end"
+                                type="submit">End Break</button>
+                    {% else %}
+                        <button class="btn btn-secondary text-nowrap"
+                                name="clock"
+                                value="break:start"
+                                type="submit">Start Break</button>
+                    {% endif %}
+                    <button class="btn btn-primary text-nowrap"
+                            name="clock"
+                            value="out"
+                            type="submit">Clock Out</button>
+                {% else %}
+                    <button class="btn btn-primary text-nowrap"
+                            name="clock"
+                            value="in"
+                            type="submit">Clock In</button>
+                {% endif %}
+            </div>
         </div>
     </div>
-
-    {% if clocked_in %}
-        <button class="btn btn-primary" name="clock" value="out" type="submit">Clock Out</button>
-
-        {% if on_break %}
-            <button class="btn btn-primary" name="clock" value="break:end" type="submit">End Break</button>
-        {% else %}
-            <button class="btn btn-warning" name="clock" value="break:start" type="submit">Start Break</button>
-        {% endif %}
-    {% else %}
-        <button class="btn btn-primary" name="clock" value="in" type="submit">Clock In</button>
-    {% endif %}
 </form>
-
 <script>
     (function() {
         const frame = document.currentScript.parentNode;
