--- a/app/templates/frames/time_stats.html.j2
+++ b/app/templates/frames/time_stats.html.j2
@@ -1,4 +1,4 @@
-<section id="stats" class="row mb-5">
+<section id="stats" class="row">
     <div class="col-md-4 mb-2">
         <div class="card border-dark">
             <div class="card-body">
@@ -43,7 +43,6 @@
         </div>
     </div>
 </section>
-
 <script>
     (function() {
         const frame = document.currentScript.parentNode;
